--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
     "SUPPORT_GROUP": {
       "description": "Your MusicPlayer support group without @ [Leave this if you don't have one]",
       "required": false,
-      "value": "DaisySupport_Official"
+      "value": "AndroidCave"
     },
     "PROJECT_NAME": {
       "description": "Your MusicPlayer project Name.",
@@ -53,12 +53,12 @@
     "BG_IMAGE": {
       "description": "BG image of bot (Use transparent one) [IGNORE].",
       "required": false,
-      "value": " https://telegra.ph/file/dcfdf612e499eef0e0b1f.png"
+      "value": "https://telegra.ph/file/8aa6bd49118a4eb0b9d25.jpg"
     },     
     "UPDATES_CHANNEL": {
       "description": "Updates Channel without @ [Leave this if you don't have one].",
       "required": false,
-      "value": "DaisyXupdates"
+      "value": "AndroidCave"
     },    
     "API_ID": {
       "description": "App ID from my.telegram.org/apps",
